Adicionando rotas a tela de home publica

--- a/src/app/components/home-publica/home-publica.component.html
+++ b/src/app/components/home-publica/home-publica.component.html
@@ -10,7 +10,7 @@
   <h1>Bem‑vindo ao Nester</h1>
   <p>Conecte‑se, compartilhe e descubra novas amizades!</p>
   <nav class="actions">
-    <a href="cadastro.html" class="btn btn-primary">Cadastrar‑se</a>
-    <a href="login.html" class="btn btn-secondary">Entrar</a>
+    <a [routerLink]="['/cadastro']" class="btn btn-primary">Cadastrar‑se</a>
+    <a [routerLink]="['/login']" class="btn btn-secondary">Entrar</a>
   </nav>
 </div>
