Finalizando o cadastro de usuario

--- a/src/app/components/usuario-cadastro/usuario-cadastro.component.html
+++ b/src/app/components/usuario-cadastro/usuario-cadastro.component.html
@@ -12,7 +12,7 @@
           id="nomeCompleto"
           name="nomeCompleto"
           placeholder="Digite seu nome completo"
-          formControlName="nomeCompleto"
+          formControlName="nome"
           required
         />
       </div>
