Adicionando toast ao projeto

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import 'ngx-toastr/toastr';
+
 /* Eric Meyer’s Reset CSS v2.0 – HTML5 Version
    https://meyerweb.com/eric/tools/css/reset/ :contentReference[oaicite:5]{index=5} */
 
