--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
     <img src="assets/logo-nester.png" alt="Logo Nester" class="logo-img" />
   </div>
   <h1>Entrar</h1>
-  <form class="login-form">
+  <form class="login-form" [formGroup]="loginForm">
     <div class="form-group">
       <label for="usuario">Celular, email ou nome de usuário</label>
       <input
@@ -12,6 +12,7 @@
         id="usuario"
         name="usuario"
         placeholder="Digite aqui"
+        formControlName="email"
         required
       />
     </div>
@@ -23,11 +24,12 @@
         id="senha"
         name="senha"
         placeholder="Sua senha"
+        formControlName="senha"
         required
       />
     </div>
 
-    <button type="submit" class="btn-submit">Entrar</button>
+    <button type="submit" class="btn-submit" (click)="login()">Entrar</button>
   </form>
   <div class="options">
     <a href="esqueci-minha-senha.html" class="link-option"
