--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@ time, mark, audio, video {
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, sans-serif;
-  background-color: #15202B;
+  background-color: #0a1117;
   height: 100vh;
   overflow: hidden;
 }
