--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -122,7 +122,7 @@
       <div class="divider"></div>
 
       <a href="#" class="right-item">Mensagens</a>
-      <a href="#" class="right-item">Ajuda</a>
+      <a href="#" class="right-item" (click)="deslogar()">Logout</a>
 
     </nav>
   </aside>
