--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -2,14 +2,29 @@
   <!-- Menu Lateral Esquerdo -->
   <aside class="sidebar">
     <div class="logo-wrapper">
-      <img src="assets/logo-nester.png" alt="Logo Nester" class="logo-img">
+      <img src="assets/logo-nester.png" alt="Logo Nester" class="logo-img" />
     </div>
     <nav class="nav-menu">
-      <button ><ng-icon title="Home" name="heroHome" /></button>
-      <button ><ng-icon title="Perfil" name="heroUserCircle" /></button>
-      <button (click)="abrirModalPublicacao()"><ng-icon title="Fazer postagem" name="heroPlusCircle" /></button>
-      <button ><ng-icon title="Itens Salvos" name="heroBookmark" /></button>
-      <button ><ng-icon title="Configurações" name="heroCog8Tooth" /></button>
+      <button [routerLink]="['/feed']" >
+        
+        <ng-icon title="Home" name="heroHome" />
+      </button>
+
+      <button>
+        <ng-icon title="Perfil" name="heroUserCircle" />
+      </button>
+
+      <button (click)="abrirModalPublicacao()">
+        <ng-icon title="Fazer postagem" name="heroPlusCircle" />
+      </button>
+
+      <button>
+        <ng-icon title="Itens Salvos" name="heroBookmark" />
+      </button>
+
+      <button>
+        <ng-icon title="Configurações" name="heroCog8Tooth" />
+      </button>
     </nav>
   </aside>
 
@@ -66,7 +81,7 @@
   <!-- Menu Lateral Direito -->
   <aside class="right-sidebar">
     <nav class="right-menu">
-      <input type="text" placeholder="Buscar" class="search">
+      <input type="text" placeholder="Buscar" class="search" />
 
       <div class="divider"></div>
       <!-- Quem Seguir transformado em tabela -->
@@ -123,9 +138,9 @@
 
       <a href="#" class="right-item">Mensagens</a>
       <a href="#" class="right-item" (click)="deslogar()">Logout</a>
-
     </nav>
   </aside>
-<div *ngIf = "feedService.publicacaoModal" >
-  <app-postagem></app-postagem>
+  <div *ngIf="feedService.publicacaoModal">
+    <app-postagem></app-postagem>
+  </div>
 </div>
