--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -5,8 +5,8 @@
       <img src="assets/logo-nester.png" alt="Logo Nester" class="logo-img" />
     </div>
     <nav class="nav-menu">
-      <button [routerLink]="['/feed']" >
-        
+      <button [routerLink]="['/feed']">
+
         <ng-icon title="Home" name="heroHome" />
       </button>
 
@@ -31,57 +31,77 @@
   <main class="main-feed">
     <div class="feeds-wrapper">
       <!-- Feed For you -->
-      <section class="feed-container">
-        <h2 class="feed-title">For you</h2>
-        <article class="post" *ngFor="let postagem of postagens">
-          <header class="post-header">
-            <div class="post-user">
-              <!-- <img src="assets/img/user-avatar.png" alt="Avatar do usuário" class="post-avatar"> -->
-              <div class="post-user-info">
-                <strong>{{postagem.usuario.nome}}</strong>
-                <span>{{postagem.dataPostagem}}</span>
-              </div>
-            </div>
-          </header>
-          <div class="post-content">
-            <p>{{postagem.mensagem}}</p>
-          </div>
-          <footer class="post-actions">
-            <button class="action-btn">Curtir</button>
-            <button class="action-btn">Comentar</button>
-          </footer>
-        </article>
-      </section>
+      <div class="feed-column">
+        <h2 class="feed-title">For You</h2>
+        <section class="feed-container">
 
-      <!-- Feed Seguindo -->
-      <section class="feed-container">
-        <h2 class="feed-title">Seguindo</h2>
-        <article class="post">
-          <header class="post-header">
-            <div class="post-user">
-              <!-- <img src="assets/img/user-avatar.png" alt="Avatar do usuário" class="post-avatar"> -->
-              <div class="post-user-info">
-                <strong>Outro Usuário</strong>
-                <span>outro · 1h</span>
+          <article class="post" *ngFor="let postagem of postagens">
+            <header class="post-header">
+              <div class="post-user">
+                <!-- <img src="assets/img/user-avatar.png" alt="Avatar do usuário" class="post-avatar"> -->
+                <div class="post-user-info">
+                  <strong>{{postagem.usuario.nome}}</strong>
+                  <span>{{postagem.dataPostagem}}</span>
+                </div>
               </div>
+            </header>
+            <div class="post-content">
+              <p>{{postagem.mensagem}}</p>
             </div>
-          </header>
-          <div class="post-content">
-            <p>O que está acontecendo neste feed 2?</p>
-          </div>
-          <footer class="post-actions">
-            <button class="action-btn">Curtir</button>
-            <button class="action-btn">Comentar</button>
-          </footer>
-        </article>
-      </section>
+            <footer class="post-actions">
+              <button class="action-btn">
+                <p>
+                  <ng-icon class="btn-icon" name="heroHeart" />100.000
+                </p>
+              </button>
+              <button class="action-btn">
+                <ng-icon class="icones-publicacao " name="heroChatBubbleOvalLeft" />
+              </button>
+            </footer>
+          </article>
+        </section>
+      </div>
+      <!-- Feed Seguindo -->
+
+      <div class="feed-column">
+        <h2 class="feed-title">For You</h2>
+        <section class="feed-container">
+          <article class="post">
+            <header class="post-header">
+              <div class="post-user">
+                <!-- <img src="assets/img/user-avatar.png" alt="Avatar do usuário" class="post-avatar"> -->
+                <div class="post-user-info">
+                  <strong>Outro Usuário</strong>
+                  <span>outro · 1h</span>
+                </div>
+              </div>
+            </header>
+            <div class="post-content">
+              <p>O que está acontecendo neste feed 2?</p>
+            </div>
+            <footer class="post-actions">
+              <button class="action-btn">
+                <p>
+                  <ng-icon class="btn-icon" name="heroHeart" />100.000
+                </p>
+              </button>
+              <button class="action-btn">
+                <ng-icon class="btn-icon" name="heroChatBubbleOvalLeft" />
+
+              </button>
+            </footer>
+          </article>
+        </section>
+      </div>
     </div>
   </main>
 
   <!-- Menu Lateral Direito -->
   <aside class="right-sidebar">
     <nav class="right-menu">
-      <input type="text" placeholder="Buscar" class="search" />
+
+      
+        <input type="text" placeholder="Buscar" class="search" />
 
       <div class="divider"></div>
       <!-- Quem Seguir transformado em tabela -->
