--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -32,7 +32,7 @@
     <button type="submit" class="btn-submit" (click)="login()">Entrar</button>
   </form>
   <div class="options">
-    <a [routerLink]="['/esqueceu-senha']" class="link-option"
+    <a [routerLink]="['/esqueci-minha-senha']" class="link-option"
       >Esqueceu sua senha?</a
     >
     <span>·</span>
